--- a/src/css/layout/main-page/hero.css
+++ b/src/css/layout/main-page/hero.css
@@ -1,6 +1,7 @@
 /* BUTTON */
 
 .hero-button {
+  max-width: 127px;
   display: inline-flex;
   padding: 10px 20px;
   justify-content: center;
@@ -28,7 +29,7 @@
 .hero-title {
   margin-top: 89px;
   margin-bottom: 14px;
-  width: 335px;
+  max-width: 335px;
   color: #050505;
   font-size: 26px;
   font-style: normal;
@@ -37,7 +38,7 @@
   text-transform: uppercase;
 }
 
-.hero-title-text {
+.hero-title-italy {
   color: #9bb537;
   font-size: 26px;
   font-style: italic;
@@ -56,12 +57,16 @@
 }
 
 .swiper {
+  padding: 0;
+  max-width: 445px;
   margin-bottom: 80px;
 }
 
 .swiper-wrapper {
   padding-bottom: 24px;
+  margin-left: 25px;
 }
+
 .swiper-content {
   display: flex;
   flex-direction: row;
@@ -71,7 +76,6 @@
 .slide-first-img {
   height: 280px;
   width: 80px;
-  margin-left: 25px;
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -147,8 +151,148 @@ span.swiper-pagination-bullet-active {
   height: 4px;
   background: #9bb537;
 }
-
 /* TABLET 768px */
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 767px) {
+  .hero-title {
+    margin-top: 93px;
+    margin-bottom: 14px;
+    max-width: 446px;
+    font-size: 36px;
+    line-height: 1.2;
+  }
+
+  .hero-title-italy {
+    font-size: 36px;
+    line-height: 1.2;
+  }
+
+  .hero-paragraph {
+    max-width: 408px;
+    margin-bottom: 32px;
+    font-size: 16px;
+    line-height: 1.5;
+  }
+
+  .hero-button {
+    margin-bottom: 64px;
+  }
+
+  .flex-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+  .swiper {
+    max-width: 871px;
+    margin-bottom: 106px;
+  }
+  .swiper-wrapper {
+    margin-left: 30px;
+  }
+  .swiper-content {
+    gap: 16px;
+  }
+
+  .slide-first-img {
+    height: 442px;
+    width: 139px;
+  }
+
+  .slide-second {
+    width: 450px;
+    height: 442px;
+  }
+
+  .slide-second-img {
+    height: 50%;
+    width: 250px;
+    margin-bottom: 32px;
+    margin-top: 76px;
+  }
+
+  .slide-second-title {
+    margin: 0 47px;
+    margin-bottom: 8px;
+    font-size: 14px;
+    line-height: 18px;
+  }
+
+  .slide-second-description {
+    font-size: 12px;
+    line-height: 14px;
+    margin-bottom: 32px;
+  }
+
+  .slide-third-img {
+    height: 442px;
+    width: 350px;
+    background-size: 600px 600px;
+  }
+}
+
+/* DESKTOP 1280px */
+
+@media screen and (min-width: 1280px) {
+  .hero-section {
+    position: relative;
+    display: flex;
+    margin-top: 100px;
+    margin-bottom: 100px;
+  }
+  .hero-title {
+    margin-bottom: 16px;
+  }
+
+  .flex-container {
+    padding: 0 0 0 100px;
+  }
+  .swiper {
+    position: absolute !important;
+    top: 0%;
+    left: 45%;
+  }
+  .swiper-wrapper {
+    margin-left: 0;
+  }
+  .swiper-content {
+    gap: 16px;
+  }
+
+  .slide-first-img {
+    height: 442px;
+    width: 139px;
+  }
+
+  .slide-second {
+    width: 350px;
+    height: 442px;
+  }
+
+  .slide-second-img {
+    height: 100%;
+    width: 350px;
+    background-size: contain;
+    margin-bottom: 32px;
+    margin-top: 76px;
+  }
+
+  .slide-second-title {
+    margin: 0 36px;
+    margin-bottom: 8px;
+    font-size: 14px;
+    line-height: 18px;
+  }
+
+  .slide-second-description {
+    font-size: 12px;
+    line-height: 14px;
+    margin-bottom: 32px;
+  }
+
+  .slide-third-img {
+    height: 442px;
+    width: 350px;
+    background-size: 600px 600px;
+  }
 }
