--- a/src/partials/main-page/hero.html
+++ b/src/partials/main-page/hero.html
@@ -1,6 +1,7 @@
 <section class="hero-section">
-    <div class="container">
-        <h1 class="hero-title">Learn to Cook <span class="hero-title-text">Tasty Treats'</span> Customizable Masterclass
+    <div class="container flex-container">
+        <h1 class="hero-title">Learn to Cook <span class="hero-title-italy">Tasty Treats'</span> Customizable
+            Masterclass
         </h1>
         <p class="hero-paragraph">
             TastyTreats - Customize Your Meal with Ingredient Options and Step-by-Step Video Guides.
