--- a/src/css/main.css
+++ b/src/css/main.css
@@ -17,6 +17,7 @@
 @import url("./components/container.css");
 @import url("./components/button.css");
 @import url("./base/common.css");
+@import url("./components/scroll-up.css");
 
 
 /* FONTS */
