--- a/src/css/layout/main-page/categories.css
+++ b/src/css/layout/main-page/categories.css
@@ -1,44 +1,45 @@
 button {
   cursor: pointer;
-  background-color: rgba(0,0,0,0);
+  background-color: rgba(0, 0, 0, 0);
   border: none;
   padding: 0;
 }
 .category-container {
-  margin-bottom: 40px
+  margin-bottom: 40px;
 }
 
 .all-categories {
   width: 176px;
-  border: 1px solid rgba(5,5,5,.2);
+  border: 1px solid rgba(5, 5, 5, 0.2);
   border-radius: 15px;
   padding: 14px 29px;
   font-weight: 500;
-  transition: all .25s cubic-bezier(.4,0,.2,1);
+  transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 }
-.all-categories:hover, body.light-theme .all-categories:focus {
+.all-categories:hover,
+body.light-theme .all-categories:focus {
   color: #f8f8f8;
   background-color: #9bb537;
-}  
-  
+}
+
 .categories-block {
   margin-top: 24px;
   width: 100%;
   max-height: 198px;
   overflow: hidden;
-  overflow-y: auto;}
+  overflow-y: auto;
+}
 
 @media only screen and (min-width: 680px) {
-  .categories-block{
-      margin-top: 30px;
+  .categories-block {
+    margin-top: 30px;
     width: 176px;
     max-height: 416px;
   }
-  
-  }
+}
 
-@media only screen and (min-width: 1200px){
-.categories-block{
+@media only screen and (min-width: 1200px) {
+  .categories-block {
     margin-top: 42px;
     width: 235px;
   }
@@ -50,47 +51,38 @@ button {
 }
 
 .category-button {
-  color:rgba(5, 5, 5, 0.30);
+  color: rgba(5, 5, 5, 0.3);
   padding-top: 9px;
   padding-bottom: 9px;
   font-weight: 500;
   cursor: pointer;
   border-radius: 5px;
-  transition: all .25s cubic-bezier(.4,0,.2,1);}
+  transition: all 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-@media only screen and (min-width: 680px){
-      .category-button{
+@media only screen and (min-width: 680px) {
+  .category-button {
     padding-top: 12px;
     padding-bottom: 12px;
   }
 }
-.category-button:hover, 
+.category-button:hover,
 .category-button:focus {
   color: #9bb537;
 }
 
+.active {
+  background-color: #9bb537 !important;
+}
 
 .categories-block::-webkit-scrollbar {
-width: 8px;
-height: 201px;
-border-radius: 12px;
-
+  width: 8px;
+  height: 201px;
+  border-radius: 12px;
 }
 
 .categories-block::-webkit-scrollbar-track {
-background-color: #F8F8F8;;
-}
-.categories-block::-webkit-scrollbar-thumb {
-background: rgba(5, 5, 5, 0.18);
-border-radius: 12px;
-}
-.categories-block::-webkit-scrollbar-thumb:hover {
-background-color: #9bb537;
-}
-
-
-.categories-block::-webkit-scrollbar-track {
-  background-color: #F8F8F8;;
+  background-color: #f8f8f8;
 }
 .categories-block::-webkit-scrollbar-thumb {
   background: rgba(5, 5, 5, 0.18);
@@ -98,4 +90,187 @@ background-color: #9bb537;
 }
 .categories-block::-webkit-scrollbar-thumb:hover {
   background-color: #9bb537;
+}
+
+.categories-block::-webkit-scrollbar-track {
+  background-color: #f8f8f8;
+}
+.categories-block::-webkit-scrollbar-thumb {
+  background: rgba(5, 5, 5, 0.18);
+  border-radius: 12px;
+}
+.categories-block::-webkit-scrollbar-thumb:hover {
+  background-color: #9bb537;
+}
+
+/* ------- pagination --------- */
+.pagination-bar {
+  display: flex;
+  gap: 4px;
+
+  justify-content: center;
+  padding-top: 40px;
+  padding-bottom: 80px;
+  margin-top: 32px;
+}
+
+.pag-btn-block {
+  display: flex;
+  gap: 4px;
+}
+
+.gag-btn-black {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #050505;
+  border: 1px solid transparent;
+  cursor: pointer;
+}
+
+.pag-btn-green {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #9bb537;
+  border: 1px solid transparent;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 1.23;
+  cursor: pointer;
+}
+
+.pag-btn-right-icon {
+  position: absolute;
+  left: -12px;
+  bottom: -10px;
+}
+
+.icon-container {
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+}
+
+.pag-btn-white {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #f8f8f8;
+  border: 1px solid rgba(5, 5, 5, 0.3);
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 1.23;
+}
+
+.pag-btn-white:hover {
+  background-color: #9bb537;
+  border: none;
+  cursor: pointer;
+  transition: all 300ms ease;
+}
+
+.pag-btn-on-hover {
+  background-color: #9bb537;
+  border: none;
+  cursor: pointer;
+  transition: all 300ms ease;
+}
+
+.pag-btn-white-tablet {
+  display: none;
+}
+
+.pag-btn-white-tablet:hover {
+  background-color: #9bb537;
+  border: none;
+  cursor: pointer;
+  transition: all 300ms ease;
+}
+
+.pag-btn-left-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 20px;
+  height: 20px;
+  fill: #f8f8f8c0;
+}
+
+.icon-wrap {
+  display: inline-block;
+  position: relative;
+}
+
+.icon-wrap-right {
+  position: relative;
+}
+
+.icon-wrap-right.overlap-right {
+  position: absolute;
+  /* left: 6px; */
+}
+
+@media screen and (min-width: 768px) {
+  .pagination-bar {
+    gap: 8px;
+    /* padding-bottom: 64px;
+      padding-bottom: 100px; */
+    margin-top: 28px;
+  }
+
+  .pag-btn-white-tablet {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    background-color: #f8f8f8;
+    border: 1px solid rgba(5, 5, 5, 0.3);
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 1.23;
+  }
+
+  .pag-btn-block {
+    gap: 8px;
+  }
+
+  .gag-btn-black {
+    width: 44px;
+    height: 44px;
+  }
+
+  .pag-btn-green {
+    width: 44px;
+    height: 44px;
+  }
+
+  .pag-btn-white {
+    width: 44px;
+    height: 44px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .pagination-bar {
+    padding-top: 64px;
+  }
+}
+
+.btn_hidden {
+  display: none;
 }
