--- a/src/css/layout/main-page/cards.css
+++ b/src/css/layout/main-page/cards.css
@@ -1,24 +1,3 @@
-/* .container-recipes {
-  width: 335px;
-}
-@media screen and (min-width: 320px) {
-  .container-recipes {
-    width: 335px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .container-recipes {
-    width: 560px;
-    padding-left: 32px;
-  }
-}
-@media screen and (min-width: 1280px) {
-  .container-recipes {
-    width: 846px;
-    padding-left: 64px;
-  }
-} */
-
 @media screen and (min-width: 1280px) {
   .section-container {
     width: 846px;
@@ -33,229 +12,7 @@
     flex-wrap: nowrap;
   }
 }
-/* Пошук */
-.search {
-  display: flex;
-  flex-wrap: wrap;
-  margin-bottom: 14px;
-  width: 335px;
-}
-@media screen and (min-width: 768px) {
-  .search {
-    width: 419px;
-    column-gap: 16px;
-    margin-left: 32px;
-  }
-}
-@media screen and (min-width: 1280px) {
-  .search {
-    flex-wrap: nowrap;
-    width: 780px;
-    margin-left: 64px;
-  }
-}
-.search-label {
-  user-select: none;
-  display: block;
-  margin-bottom: 8px;
 
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 14px;
-  position: absolute;
-  top: -22px;
-  color: #05050580;
-}
-@media screen and (min-width: 768px) {
-  .search-label {
-    top: -26px;
-  }
-}
-.search-thumb {
-  position: relative;
-}
-
-@media screen and (min-width: 320px) and (max-width: 767px) {
-  .search-wrapper {
-    width: 335px;
-
-    margin-bottom: 36px;
-  }
-}
-@media screen and (min-width: 768px) and (max-width: 1279px) {
-  .search-wrapper {
-    width: 278px;
-    margin-bottom: 42px;
-  }
-}
-.label-positin {
-  position: relative;
-}
-.search-field {
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  /* padding-left: 48px; */
-  padding: 14px 14px 14px 48px;
-  width: 100%;
-  height: 46px;
-  color: #050505;
-  border-radius: 15px;
-  outline: none;
-  border: 1px solid #05050533;
-}
-@media screen and (min-width: 768px) {
-  .search-field {
-    height: 48px;
-  }
-}
-.search-field::placeholder {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 18px;
-
-  color: #05050580;
-}
-.search-field:focus {
-  border: 1px solid #9bb537;
-  box-shadow: 0 0 5px #9bb537;
-}
-
-.search-button {
-  position: absolute;
-  top: 14px;
-  left: 18px;
-}
-.search-field-icon {
-  fill: #05050580;
-}
-.search-field:focus + .search-button .search-field-icon {
-  fill: #9bb537;
-}
-
-@media screen and (max-width: 767px) {
-  .time-wrapper {
-    margin-bottom: 36px;
-    margin-right: 14px;
-    width: 160px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .time-wrapper {
-    width: 125px;
-    margin-right: 0;
-  }
-}
-.select {
-  width: 100%;
-
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 18px;
-
-  outline: none;
-  /* color: #050505; */
-
-  border: 1px solid #05050533;
-  border-radius: 15px;
-
-  padding: 12px 18px;
-}
-@media screen and (min-width: 768px) {
-  .select {
-    height: 48px;
-  }
-}
-
-/*time select відкриваюча шторка*/
-.ss-main {
-  color: #050505;
-}
-.ss-main:focus {
-  border: 1px solid #9bb537;
-  box-shadow: 0 0 5px #9bb537;
-}
-.ss-main.ss-open-below {
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
-}
-.ss-content.ss-open-below {
-  height: 124px;
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
-}
-.ss-content.ss-open-below.area-select,
-.ss-content.ss-open-below.ingredients-select {
-  height: 176px;
-}
-@media screen and (min-width: 768px) {
-  .ss-content.ss-open-below {
-    height: 128px;
-  }
-  .ss-content.ss-open-below.area-select,
-  .ss-content.ss-open-below.ingredients-select {
-    height: 188px;
-  }
-}
-
-.ss-content .ss-list .ss-option {
-  color: #0505054d;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 18px;
-  letter-spacing: 0em;
-  /* padding: 0; */
-}
-/* Ховер селекта */
-.ss-content .ss-list .ss-option:hover {
-  color: #0505054d;
-  background-color: transparent;
-}
-/* При натисканні обирається колір */
-.ss-content .ss-list .ss-option.ss-highlighted,
-.ss-content .ss-list .ss-option:not(.ss-disabled).ss-selected {
-  background-color: transparent;
-}
-.ss-content .ss-list .ss-option:not(:last-child) {
-  padding-bottom: 8px;
-}
-.ss-content .ss-list .ss-option:not(.ss-disabled).ss-selected {
-  color: #050505;
-}
-
-/* area search */
-.area-wrapper {
-  width: 160px;
-}
-@media screen and (min-width: 768px) {
-  .area-wrapper {
-    width: 141px;
-  }
-}
-
-/* Пошук інгрідієнтів*/
-.ingredients-wrapper {
-  width: 188px;
-}
-/* Кнопка reset */
-.wrapper-reset {
-  display: flex;
-  justify-content: flex-end;
-}
-
-.button-reset {
-  display: flex;
-  justify-content: flex-end;
-}
-.reset-icon {
-  fill: #9bb537;
-  margin-right: 4px;
-}
-.reset-text {
-  font-size: 12px;
-  font-weight: 500;
-  line-height: 16px;
-  color: #05050580;
-}
 /* Карточка з рецептом */
 
 .cards-list {
@@ -282,8 +39,6 @@
   position: relative;
   overflow: hidden;
 
-  /* width: 335px;
-  height: 335px; */
   border-radius: 15px;
 }
 
@@ -313,19 +68,7 @@
     rgba(5, 5, 5, 0) 108.72%
   );
 }
-/* .recipes-img {
-  object-fit: cover;
-  width: 335px;
-  height: 335px;
 
- 
-} */
-/* @media screen and (min-width: 768px) {
-  .recipes-img {
-    width: 240px;
-    height: 264px;
-  }
-} */
 .card-description {
   position: absolute;
   bottom: 0;
@@ -352,13 +95,7 @@
   border: none;
   background: transparent;
 }
-/* @media screen and (min-width: 768px) {
-  .like-btn {
-    position: absolute;
-    top: 0;
-    right: 0;
-  }
-} */
+
 .like-logo {
   fill: transparent;
 }
@@ -375,7 +112,7 @@
 
   user-select: none;
 
-  color: #f8f8f8;
+  color: var(--cards-text-color-white-theme);
 }
 @media screen and (min-width: 768px) {
   .card-heading {
@@ -419,7 +156,7 @@
 
   user-select: none;
 
-  color: #f8f8f8;
+  color: var(--cards-text-color-white-theme);
 }
 .card-text::-webkit-scrollbar {
   width: 0px;
@@ -433,7 +170,7 @@
 
   margin-right: 4px;
 
-  color: #f8f8f8;
+  color: var(--cards-text-color-white-theme);
 }
 .rating {
   display: flex;
@@ -445,7 +182,7 @@
   fill: #f8f8f81a;
 }
 .reting-item.filled {
-  fill: #eea10c;
+  fill: var(--star-color);
   opacity: 1;
 }
 
@@ -454,8 +191,8 @@
   font-weight: 500;
   font-size: 12px;
   line-height: 14.52px;
-  color: #f8f8f8;
-  background-color: #9bb537;
+  color: var(--cards-text-color-white-theme);
+  background-color: var(--accent-color);
   border: none;
 
   min-width: 89px;
@@ -467,10 +204,3 @@
   bottom: 16px;
   right: 16px;
 }
-/* @media screen and (min-width: 768px) {
-  .btn-see-recipe {
-    position: absolute;
-    bottom: 16px;
-    right: 16px;
-  }
-} */
