--- a/src/partials/main-page/filters.html
+++ b/src/partials/main-page/filters.html
@@ -1,5 +1,5 @@
 <div class="search">
-      <label class="search-wrapper label-positin" >
+      <label class="search-wrapper label-position" >
         <span class="search-label">Search</span>
         
         <div class="search-thumb">
@@ -19,7 +19,7 @@
       </label>
       
 
-      <label class="time-wrapper label-positin" >
+      <label class="time-wrapper label-position" >
         <span class="search-label">Time</span>
       <select class="time-select select js-time-select" name="time" >
         <option  data-placeholder="true"></option>
@@ -31,7 +31,7 @@
       </select>
      </label>
       
-     <label class="area-wrapper label-positin" >
+     <label class="area-wrapper label-positoin" >
       <span class="search-label">Area</span>
       <select class="area-select select js-area-select" name="area" >
         <option  data-placeholder="true"></option>
@@ -42,7 +42,7 @@
       </select>
       </label>
 
-      <label class="ingredients-wrapper label-positin" >
+      <label class="ingredients-wrapper label-positoin" >
       <span class="search-label">Ingredients</span>
       <select class="ingredients-select select js-ingredients-select" name="ingredients" >
         <option  data-placeholder="true"></option>
