--- a/src/css/layout/main-page/see-recipe.css
+++ b/src/css/layout/main-page/see-recipe.css
@@ -173,6 +173,28 @@
     background-color: #9bb537;
 }
 
+.yellow-star{
+    width: 18px;
+    height: 18px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-image: url('../img/sprite/icons.svg');
+}
+
+.yellow-star[data-icon="icon-star"] {
+    background-position: 0 0;
+    
+}
+
+/* .yellow-star::before {
+    content: "";
+    background-image: url('../img/sprite/icons.svg#icon-star');
+    width: 24px;
+    height: 24px;
+    display: inline-block;
+    vertical-align: middle;
+}  */
+
 @media screen and (min-width: 768px){
     .modal{
         width: 531px;
