--- a/src/css/layout/main-page/hero.css
+++ b/src/css/layout/main-page/hero.css
@@ -76,6 +76,7 @@
 .slide-first-img {
   height: 280px;
   width: 80px;
+  background-color: #050505;
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -86,7 +87,11 @@
 
 .slide-second {
   width: 200px;
-  background-color: #050505;
+  background: radial-gradient(
+    circle,
+    rgba(155, 181, 55, 0.7) 0%,
+    rgba(5, 5, 5, 1) 65%
+  );
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -184,7 +189,7 @@ span.swiper-pagination-bullet-active {
     justify-content: flex-start;
   }
   .swiper {
-    max-width: 871px;
+    max-width: 768px;
     margin-bottom: 106px;
   }
   .swiper-wrapper {
@@ -200,7 +205,7 @@ span.swiper-pagination-bullet-active {
   }
 
   .slide-second {
-    width: 450px;
+    width: 350px;
     height: 442px;
   }
 
@@ -230,7 +235,6 @@ span.swiper-pagination-bullet-active {
     background-size: 600px 600px;
   }
 }
-
 /* DESKTOP 1280px */
 
 @media screen and (min-width: 1280px) {
@@ -248,7 +252,7 @@ span.swiper-pagination-bullet-active {
   }
 
   .flex-container {
-    padding: 0 0 0 100px;
+    padding: 0 100px 0 100px;
   }
   .swiper {
     position: absolute !important;
@@ -259,6 +263,7 @@ span.swiper-pagination-bullet-active {
     margin-left: 0;
   }
   .swiper-content {
+    width: 700px;
     gap: 16px;
   }
 
@@ -274,7 +279,7 @@ span.swiper-pagination-bullet-active {
 
   .slide-second-img {
     height: 100%;
-    width: 350px;
+    width: 300px;
     background-size: contain;
     margin-bottom: 32px;
     margin-top: 76px;
