aded favorite js

--- a/src/partials/favorites-page/default.html
+++ b/src/partials/favorites-page/default.html
@@ -32,6 +32,13 @@
                 easier access in the future.
             </p>
         </div>
+        <div class="fav-categories">
+            
+        </div>
+        <div class="fav-container">
+            
+        </div>
+        <button class="delete">DeleteLS</button>
     </div>   
   </div>
 </section>
