--- a/src/partials/main-page/filters.html
+++ b/src/partials/main-page/filters.html
@@ -31,7 +31,7 @@
       </select>
      </label>
       
-     <label class="area-wrapper label-positoin" >
+     <label class="area-wrapper label-positoin area-wrapper-js" >
       <span class="search-label">Area</span>
       <select class="area-select select js-area-select" name="area" >
         <option  data-placeholder="true"></option>
@@ -42,7 +42,7 @@
       </select>
       </label>
 
-      <label class="ingredients-wrapper label-positoin" >
+      <label class="ingredients-wrapper label-positoin ingredients-wrapper-js" >
       <span class="search-label">Ingredients</span>
       <select class="ingredients-select select js-ingredients-select" name="ingredients" >
         <option  data-placeholder="true"></option>
