--- a/src/css/main.css
+++ b/src/css/main.css
@@ -40,6 +40,8 @@
 
 @import url('./layout/main-page/see-recipe.css');
 
+@import url('./layout/main-page/give-rating-modal.css');
+
 @import url('./layout/footer.css');
 
 /* favorites-page */
