--- a/src/css/main.css
+++ b/src/css/main.css
@@ -42,6 +42,8 @@
 
 @import url('./layout/main-page/give-rating-modal.css');
 
+@import url('./layout/main-page/new-order-modal.css');
+
 @import url('./layout/footer.css');
 
 /* favorites-page */
