--- a/src/css/layout/favorites-page/default.css
+++ b/src/css/layout/favorites-page/default.css
@@ -1,13 +1,12 @@
 .favorite {
   width: 100%;
   margin: 0 auto;
-  padding-top: 50px;
-  padding-bottom: 80px;
+  padding-top: 285px;
+  padding-bottom: 330px;
 }
 
 .fav-hero {
   flex-direction: column;
-  gap: 40px;
   display: flex;
 }
 .fav__text {
@@ -15,7 +14,7 @@
   text-align: center;
   font-size: 14px;
   font-weight: 400;
-  line-height: 18px;
+  line-height: 1.3;
 }
 
 .fav-empty {
@@ -23,11 +22,59 @@
   flex-direction: column;
   margin: 0 auto;
   align-items: center;
-  gap: 24px;
+}
+
+.fav-img{
+  display: none;
+  width: 335px;
+  height: auto;
+}
+
+.fav-icon{
+  width: 68px;
+  height: auto;
+  margin-bottom: 24px;
 }
 
 .is-hidden {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+}
+
+@media screen and (min-width: 768px) {
+
+  .favorite{
+    padding-top: 50px;
+    padding-bottom: 320px;
+  }
+
+  .fav-img{
+    width: 704px;
+    display: block;
+  }
+  
+  .fav-icon{
+    width: 97px;
+    margin-bottom: 32px;
+    margin-top: 64px;
+  }
+
+  .fav__text{
+    font-size: 16px;
+    line-height: 1.5;
+    width: 481px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+
+  .favorite{
+    padding-top: 40px;
+    padding-bottom: 65px;
+  }
+
+  .fav-img {
+    width: 1080px;
+  }
 }
