--- a/src/css/base/root.css
+++ b/src/css/base/root.css
@@ -1,13 +1,20 @@
-:root{
-    --text-color-white-theme: #050505;
-    --text-color-black-theme: #FFFFFFCC;
-    --not-active-btn-color-white: #0505054D;
-    --not-active-btn-color-black: #FFFFFF80;
-    /* --thirdly-text-color: #05050580; */
-    --cards-text-color-white-theme: #F8F8F8;
-    --gray-cards-text-color-black-theme: #FFFFFFCC;
-    --accent-color: #9BB537;
-    --form-border-color: #05050533;
-    --star-color: #EEA10C;
-    --black-bg-color: #050505;
+:root[data-theme='light'] {
+  --test-background: f8f8f8;
+}
+:root[data-theme='dark'] {
+  --test-background: #9bb537;
+}
+
+:root {
+  --text-color-white-theme: #050505;
+  --text-color-black-theme: #ffffffcc;
+  --not-active-btn-color-white: #0505054d;
+  --not-active-btn-color-black: #ffffff80;
+  --thirdly-text-color: #05050580;
+  --cards-text-color-white-theme: #f8f8f8;
+  --gray-cards-text-color-black-theme: #ffffffcc;
+  --accent-color: #9bb537;
+  --form-border-color: #05050533;
+  --star-color: #eea10c;
+  --black-bg-color: #050505;
 }
