--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,7 +10,7 @@
             <span class="logo-color">tasty</span>treats.
         </a>
         <div class="buttons">
-            <a href="tel:+38073000000" class="basket-btn" >
+            <a href="tel:+38073000000" class="basket-btn">
                 <svg class="basket-icon" width="24px" height="24px">
                     <use href="img/sprite/icons.svg#icon-cart"></use>
                 </svg>
@@ -20,25 +20,32 @@
                     <use href="img/sprite/icons.svg#icon-hamburger"></use>
                 </svg>
             </button>
+            <div class="theme-switcher main js-switcher">
+                <input type="checkbox" class="input-switcher" id="switch" />
+                <label class="input-label" for="switch">Toggle</label>
+            </div>
         </div>
     </div>
-<div class="backdrop is-hidden">
-    <div class="mob-menu container js-menu-container">
-        <button type="button" class="close-menu-btn js-close-menu">
-            <svg class="close-icon" width="32px" height="32px">
-                <use href="img/sprite/icons.svg#icon-close-x"></use>
-            </svg>
-        </button>
-        <nav class="mob-menu-nav">
-            <ul class="mob-menu-list list">
-                <li class="mob-menu-item"><a href="index.html">Home</a></li>
-                <li class="mob-menu-item"><a href="favorites.html">Favorites</a></li>
-            </ul>
-        </nav>
+    <div class="backdrop is-hidden">
+        <div class="mob-menu container js-menu-container">
+            <button type="button" class="close-menu-btn js-close-menu">
+                <svg class="close-icon" width="32px" height="32px">
+                    <use href="img/sprite/icons.svg#icon-close-x"></use>
+                </svg>
+            </button>
+            <nav class="mob-menu-nav">
+                <ul class="mob-menu-list list">
+                    <li class="mob-menu-item"><a href="index.html">Home</a></li>
+                    <li class="mob-menu-item"><a href="favorites.html">Favorites</a></li>
+                </ul>
+            </nav>
+            <div class="theme-switcher burger">
+                <input type="checkbox" class="input-switcher mobile-switch" id="mobile-switch" />
+                <label class="input-label mobile-input" for="mobile-switch"></label>
+            </div>
+        </div>
     </div>
-</div>
-<script defer
-      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
-      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
-      crossorigin="anonymous"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+        integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+        crossorigin="anonymous"></script>
 </header>
