--- a/src/css/base/common.css
+++ b/src/css/base/common.css
@@ -1,3 +1,4 @@
-body{
-    font-family: 'Inter', sans-serif;
+body {
+  font-family: 'Inter', sans-serif;
+  background-color: var(--test-background);
 }
