--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,22 +5,24 @@
   |============================
 */
 /* UTILS */
-@import url('./utils/basicLightbox.min.css');
+@import url("./utils/basicLightbox.min.css");
 
 /* ROOT */
-@import url('./base/root.css');
+@import url("./base/root.css");
 
 /* BASE */
 @import url('./base/reset.css');
 
 /* COMPONENTS */
-@import url('./components/container.css');
-@import url('./components/button.css');
-@import url('./base/common.css');
-@import url('./components/scroll-up.css');
+@import url("./components/container.css");
+@import url("./components/button.css");
+@import url("./base/common.css");
+@import url("./components/scroll-up.css");
+
 
 /* FONTS */
-@import url('./fonts-face/fonts.css');
+@import url("./fonts-face/fonts.css");
+
 
 /* LAYOUT */
 /* main-page */
@@ -39,6 +41,8 @@
 @import url('./layout/main-page/see-recipe.css');
 
 @import url('./layout/main-page/give-rating-modal.css');
+
+@import url('./layout/main-page/new-order-modal.css');
 
 @import url('./layout/footer.css');
 
