add-filter-by-selects

--- a/src/partials/main-page/filters.html
+++ b/src/partials/main-page/filters.html
@@ -39,7 +39,7 @@
       
 </div>
    <div class="wrapper-reset">
-  <button class="button-reset" type="submit">
+  <button class="button-reset button-reset-js" type="submit">
     <svg class="reset-icon" width="16" height="16">
       <use href="img/sprite/icons.svg#icon-close-x"></use>
      <span class="reset-text">Reset the filter</span>
