upd root colors

--- a/src/css/layout/favorites-page/default.css
+++ b/src/css/layout/favorites-page/default.css
@@ -11,7 +11,7 @@
   display: flex;
 }
 .fav__text {
-  color: #050505;
+  color: var(----primary-brand-color);
   text-align: center;
   font-size: 14px;
   font-weight: 400;
@@ -35,4 +35,3 @@
 .is-none {
   display: none;
 }
-
