--- a/src/css/base/common.css
+++ b/src/css/base/common.css
@@ -1,4 +1,5 @@
 body {
   font-family: 'Inter', sans-serif;
-  background-color: var(--test-background);
+  background-color: var(--background-color);
+  transition: var(--transition);
 }
