--- a/src/css/base/root.css
+++ b/src/css/base/root.css
@@ -20,6 +20,7 @@
 }
 
 :root {
+  --transition: 750ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
   --text-color-white-theme: #050505;
   --text-color-black-theme: #ffffffcc;
   --not-active-btn-color-white: #0505054d;
