--- a/src/css/components/scroll-up.css
+++ b/src/css/components/scroll-up.css
@@ -13,7 +13,7 @@
     border-radius: 50%;
     background-color: var(--accent-color);
     animation: slideInDown 6s infinite alternate;
-    transition: opacity 0.3s ease-in-out;
+    transition: var(--transition);
     fill: var(--color-btn-var2);
   }
   
