--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,24 +5,22 @@
   |============================
 */
 /* UTILS */
-@import url("./utils/basicLightbox.min.css");
+@import url('./utils/basicLightbox.min.css');
 
 /* ROOT */
-@import url("./base/root.css");
+@import url('./base/root.css');
 
 /* BASE */
 @import url('./base/reset.css');
 
 /* COMPONENTS */
-@import url("./components/container.css");
-@import url("./components/button.css");
-@import url("./base/common.css");
-@import url("./components/scroll-up.css");
-
+@import url('./components/container.css');
+@import url('./components/button.css');
+@import url('./base/common.css');
+@import url('./components/scroll-up.css');
 
 /* FONTS */
-@import url("./fonts-face/fonts.css");
-
+@import url('./fonts-face/fonts.css');
 
 /* LAYOUT */
 /* main-page */
@@ -50,4 +48,3 @@
 @import url('./layout/header.css');
 
 @import url('./layout/favorites-page/default.css');
-
