--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,13 +1,14 @@
-<footer class=" container footer">
-    <div class="footer-desk">
+<footer class="container footer">
+  <div class="footer-desk">
     <div class="footer-all">
-     <div class="footer-container-logo">
+      <div class="footer-container-logo">
         <a class="link logo-footer" href="./index.html">
           <span class="logo-color">tasty</span>treats.
         </a>
         <p class="footer-text">
-          Don't know what to cook for dinner or how to surprise your guests? <br />
-           Subscribe - we solve this problem
+          Don't know what to cook for dinner or how to surprise your guests?
+          <br />
+          Subscribe - we solve this problem
         </p>
       </div>
       <div class="footer-media">
@@ -34,25 +35,29 @@
               </svg> -->
             </a>
           </li>
-          
         </ul>
-        
       </div>
     </div>
-      <div class="footer-policy">
-        <ul class="footer-policy-list">
-          <li class="footer-policy-item">
-            <a class="footer-policy-link link" href="#" onclick="return false;">Terms of Use</a>
-          </li>
-    
-          <li class="footer-policy-item">
-            <a class="footer-policy-link link" href="#" onclick="return false;">Privacy Policy</a>
-          </li>
-    
-          <li class="footer-policy-item">
-            <a class="footer-policy-link link" href="#" onclick="return false;">Digital accessibility</a>
-          </li>
-        </ul>
-        </div>
+    <div class="footer-policy">
+      <ul class="footer-policy-list">
+        <li class="footer-policy-item">
+          <a class="footer-policy-link link" href="#" onclick="return false;"
+            >Terms of Use</a
+          >
+        </li>
+
+        <li class="footer-policy-item">
+          <a class="footer-policy-link link" href="#" onclick="return false;"
+            >Privacy Policy</a
+          >
+        </li>
+
+        <li class="footer-policy-item">
+          <a class="footer-policy-link link" href="#" onclick="return false;"
+            >Digital accessibility</a
+          >
+        </li>
+      </ul>
     </div>
-  </footer>
+  </div>
+</footer>
