--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -8,31 +8,40 @@
         <p class="footer-text">
           Don't know what to cook for dinner or how to surprise your guests?
           <br />
-          Subscribe - we solve this problem
+          Subscribe - we solve this problem!
         </p>
       </div>
       <div class="footer-media">
         <p class="title-media">Social media</p>
         <ul class="social-list-footer list">
           <li class="social-list-item">
-            <a href="" class="footer-social-list-link link">
-              <!-- <svg class="foter-social-list-icon" width="24" height="24">
-                <use href="./img/icons.svg#icon-instagram"></use>
-              </svg> -->
+            <a
+              href="https://uk-ua.facebook.com/"
+              class="footer-social-list-link link"
+            >
+              <svg class="foter-social-list-icon" width="24" height="24">
+                <use href="./img/sprite/icons.svg#icon-facebook"></use>
+              </svg>
             </a>
           </li>
           <li class="social-list-item">
-            <a href="" class="footer-social-list-link link">
-              <!-- <svg class="foter-social-list-icon" width="24" height="24">
-                <use href="./img/icons.svg#icon-twitter"></use>
-              </svg> -->
+            <a
+              href="https://www.instagram.com/"
+              class="footer-social-list-link link"
+            >
+              <svg class="foter-social-list-icon" width="24" height="24">
+                <use href="./img/sprite/icons.svg#icon-instagram"></use>
+              </svg>
             </a>
           </li>
           <li class="social-list-item">
-            <a href="" class="footer-social-list-link link">
-              <!-- <svg class="foter-social-list-icon" width="24" height="24">
-                <use href=""></use>
-              </svg> -->
+            <a
+              href="https://twitter.com/?lang=uk"
+              class="footer-social-list-link link"
+            >
+              <svg class="foter-social-list-icon" width="24" height="24">
+                <use href="./img/sprite/icons.svg#icon-twitter"></use>
+              </svg>
             </a>
           </li>
         </ul>
